--- a/pages/question8.html
+++ b/pages/question8.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Вопрос 8</title>
+    <title>Вопрос 10</title>
     <link rel="stylesheet" href="../static/css/styles.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
@@ -14,63 +14,84 @@
     <a href="question3.html">Вопрос 3</a>
     <a href="question4.html">Вопрос 4</a>
     <a href="question5.html">Вопрос 5</a>
-    <a href="question4.html">Вопрос 6</a>
-    <a href="question5.html">Вопрос 7</a>
-    <a href="question6.html">Вопрос 8</a>
+    <a href="question6.html">Вопрос 6</a>
+    <a href="question7.html">Вопрос 7</a>
+    <a href="question8.html">Вопрос 8</a>
     <a href="question9.html">Вопрос 9</a>
     <a href="question10.html">Вопрос 10</a>
     <a href="question11.html">Вопрос 11</a>
     <a href="question12.html">Вопрос 12</a>
     <a href="question13.html">Вопрос 13</a>
-    <a href="question14.html">Вопрос 14</a>
-    <a href="question15.html">Вопрос 15</a>
 </div>
 <div class="content">
     <div class="header">
-        <h1>Вопрос 8</h1>
+        <h1>Вопрос 10</h1>
     </div>
     <div class="main">
-        <h4>Алгоритм Кнута-Морриса-Пратта</h4>
-        <p>Алгоритм Кнута-Морриса-Пратта (KMP) является алгоритмом поиска подстроки в строке. Он был разработан
-            Дональдом Кнутом, Джеймсом Моррисом и Вацлавом Праттом в 1977 году и широко применяется в обработке строк,
-            алгоритмах компиляции и других областях.</p>
+        <h4>Алгоритм Бойера-Мура</h4>
+        <ol>
+            <li>Создайте таблицу смещений, содержащую информацию о том, насколько можно сдвинуть паттерн вправо, если
+                произошло несоответствие. Если символ не встречается в паттерне, сдвиньте на длину паттерна. В противном
+                случае сдвиньте на максимально возможное число позиций, чтобы выровнять последнее вхождение этого
+                символа в
+                паттерне с текущей позицией.
+            </li>
+            <li>Сравните паттерн с текстом, начиная с конца паттерна и двигаясь влево. Если все символы совпадают, вы
+                нашли вхождение паттерна.
+            </li>
+            <li>Если символы не совпадают, используйте таблицу смещений, чтобы сдвинуть паттерн вправо на
+                соответствующее
+                количество позиций.
+            </li>
+            <li>
+                Повторяйте шаги 2-3, пока не найдете все вхождения паттерна в тексте.
+            </li>
+        </ol>
 
-        <h6>Алгоритм Кнута-Морриса-Пратта</h6>
-        <p>Алгоритм KMP основан на использовании префикс-функции, которая вычисляет длину самого длинного суффикса
-            подстроки, который также является ее префиксом. Префикс-функция позволяет избежать лишних сравнений при
-            поиске подстроки в строке.</p>
+        <p>Вот пример использования алгоритма Бойера-Мура для поиска вхождений паттерна "abc" в тексте
+            "abacababc":</p>
+        <ol>
+            <li>Создайте таблицу смещений: "a" - 3, "b" - 2, "c" - 1.</li>
+            <li>Начните сравнивать паттерн с текстом, начиная с конца паттерна и двигаясь влево. Сначала сравните "c" в
+                паттерне с "b" в тексте, несоответствие.
+            </li>
+            <li>Используйте таблицу смещений, чтобы сдвинуть паттерн вправо на 2 позиции.</li>
+            <li>Сравните "c" в паттерне с "a" в тексте, несоответствие.</li>
+            <li>Используйте таблицу смещений, чтобы сдвинуть паттерн вправо на 3 позиции.</li>
+            <li>Сравните "c" в паттерне с "c" в тексте, совпадение.</li>
+            <li>Сравните "b" в паттерне с "b" в тексте, совпадение.</li>
+            <li>Сравните "a" в паттерне с "a" в тексте, совпадение.</li>
+            <li>Найдено первое вхождение паттерна в тексте.</li>
+            <li>Используйте таблицу смещений, чтобы сдвинуть паттерн вправо на 1 позицию.</li>
+            <li>Сравните "c" в паттерне с "b" в тексте, несоответствие.</li>
+            <li>Используйте таблицу смещений, чтобы сдвинуть паттерн вправо на 2 позиции.</li>
+            <li>Сравните "c" в паттерне с "a" в тексте, совпадение.</li>
+            <li>Используйте таблицу смещений, чтобы сдвинуть паттерн вправо на 3 позиции.</li>
+            <li>Сравните "c" в паттерне с "c" в тексте, несоответствие.</li>
+            <li>Используйте таблицу смещений, чтобы сдвинуть паттерн вправо на 3 позиции.</li>
+            <li>Сравните "c" в паттерне с "b" в тексте, несоответствие.</li>
+            <li>Используйте таблицу смещений, чтобы сдвинуть паттерн вправо на 2 позиции.</li>
+            <li>Сравните "c" в паттерне с "a" в тексте, несоответствие.</li>
+            <li>Используйте таблицу смещений, чтобы сдвинуть паттерн вправо на 3 позиции.</li>
+            <li>Сравните "c" в паттерне с "c" в тексте, совпадение.</li>
+            <li>Сравните "b" в паттерне с "b" в тексте, совпадение.</li>
+            <li>Сравните "a" в паттерне с "a" в тексте, совпадение.</li>
+            <li>Найдено второе вхождение паттерна в тексте.</li>
+        </ol>
 
-        <p>Давайте рассмотрим пример алгоритма KMP на строке "ABCABDABABCABE". Для начала вычислим префикс-функцию для
-            подстроки "ABCAB".</p>
-
-        <p>Процесс вычисления префикс-функции будет выглядеть следующим образом:</p>
-
-        <pre>
-    Подстрока: ABCAB
-    Префикс-функция: 0 0 0 1 2
-  </pre>
-
-        <p>Теперь мы можем использовать полученную префикс-функцию для поиска подстроки в строке. Мы будем сравнивать
-            символы строки и подстроки, пропуская некоторые сравнения на основе значений префикс-функции.</p>
-
-        <p>Процесс применения алгоритма KMP будет выглядеть следующим образом:</p>
-
-        <pre>
-    Строка: ABCABDABABCABE
-    Подстрока: ABCAB
-    Префикс-функция: 0 0 0 1 2
-    Результат: Найдено в позиции 0
-  </pre>
-
-        <p>Алгоритм KMP находит первое вхождение подстроки в строку. В данном случае, подстрока "ABCAB" найдена в
-            позиции 0 строки "ABCABDABABCABE".</p>
-
-        <p>Если нам нужно найти все вхождения подстроки, мы можем продолжить поиск, начиная со следующей позиции после
-            найденного вхождения.</p>
-
-        <p>Алгоритм Кнута-Морриса-Пратта эффективно находит подстроки в строке, используя префикс-функцию для
-            оптимизации поиска. Он широко применяется в различных областях, таких как обработка строк, поиск в текстах и
-            других.</p>
+        <h6>Модификация в духе Чжу-Такаоки</h6>
+        <p>
+            Модификация алгоритма Бойера-Мура в духе Чжу-Такаоки - это улучшенная версия классического алгоритма
+            Бойера-Мура для поиска подстроки в строке. Эта модификация использует два массива препроцессинга, которые
+            называются массивами хэшей и суффиксов. Массив хэшей используется для быстрого вычисления хэша подстроки, а
+            массив суффиксов используется для быстрого нахождения наибольшего суффикса подстроки, который является также
+            ее префиксом. Это позволяет ускорить алгоритм, особенно когда искомая подстрока имеет большую длину.
+        </p>
+        <p>
+            В общем случае, алгоритм Бойера-Мура и его модификации хорошо подходят для поиска подстроки в строке, когда
+            подстрока имеет небольшую длину и часто встречается в тексте. Однако, когда подстрока имеет большую длину
+            или встречается редко, более эффективным решением может быть использование суффиксных деревьев.
+        </p>
 
     </div>
 </div>
