--- a/pages/question10.html
+++ b/pages/question10.html
@@ -1,101 +1,36 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <title>Вопрос 10</title>
-    <link rel="stylesheet" href="../static/css/styles.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <meta charset="UTF-8">
+  <title>Вопрос 12</title>
+  <link rel="stylesheet" href="../static/css/styles.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 <body>
 <div class="navbar">
-    <a href="../index.html">Содержание</a>
-    <a href="question1.html">Вопрос 1</a>
-    <a href="question2.html">Вопрос 2</a>
-    <a href="question3.html">Вопрос 3</a>
-    <a href="question4.html">Вопрос 4</a>
-    <a href="question5.html">Вопрос 5</a>
-    <a href="question4.html">Вопрос 6</a>
-    <a href="question5.html">Вопрос 7</a>
-    <a href="question6.html">Вопрос 8</a>
-    <a href="question9.html">Вопрос 9</a>
-    <a href="question10.html">Вопрос 10</a>
-    <a href="question11.html">Вопрос 11</a>
-    <a href="question12.html">Вопрос 12</a>
-    <a href="question13.html">Вопрос 13</a>
-    <a href="question14.html">Вопрос 14</a>
-    <a href="question15.html">Вопрос 15</a>
+  <a href="../index.html">Содержание</a>
+  <a href="question1.html">Вопрос 1</a>
+  <a href="question2.html">Вопрос 2</a>
+  <a href="question3.html">Вопрос 3</a>
+  <a href="question4.html">Вопрос 4</a>
+  <a href="question5.html">Вопрос 5</a>
+  <a href="question6.html">Вопрос 6</a>
+  <a href="question7.html">Вопрос 7</a>
+  <a href="question8.html">Вопрос 8</a>
+  <a href="question9.html">Вопрос 9</a>
+  <a href="question10.html">Вопрос 10</a>
+  <a href="question11.html">Вопрос 11</a>
+  <a href="question12.html">Вопрос 12</a>
+  <a href="question13.html">Вопрос 13</a>
 </div>
 <div class="content">
-    <div class="header">
-        <h1>Вопрос 10</h1>
-    </div>
-    <div class="main">
-        <h4>Алгоритм Бойера-Мура</h4>
-        <ol>
-            <li>Создайте таблицу смещений, содержащую информацию о том, насколько можно сдвинуть паттерн вправо, если
-                произошло несоответствие. Если символ не встречается в паттерне, сдвиньте на длину паттерна. В противном
-                случае сдвиньте на максимально возможное число позиций, чтобы выровнять последнее вхождение этого
-                символа в
-                паттерне с текущей позицией.
-            </li>
-            <li>Сравните паттерн с текстом, начиная с конца паттерна и двигаясь влево. Если все символы совпадают, вы
-                нашли вхождение паттерна.
-            </li>
-            <li>Если символы не совпадают, используйте таблицу смещений, чтобы сдвинуть паттерн вправо на
-                соответствующее
-                количество позиций.
-            </li>
-            <li>
-                Повторяйте шаги 2-3, пока не найдете все вхождения паттерна в тексте.
-            </li>
-        </ol>
-
-        <p>Вот пример использования алгоритма Бойера-Мура для поиска вхождений паттерна "abc" в тексте
-            "abacababc":</p>
-        <ol>
-            <li>Создайте таблицу смещений: "a" - 3, "b" - 2, "c" - 1.</li>
-            <li>Начните сравнивать паттерн с текстом, начиная с конца паттерна и двигаясь влево. Сначала сравните "c" в
-                паттерне с "b" в тексте, несоответствие.
-            </li>
-            <li>Используйте таблицу смещений, чтобы сдвинуть паттерн вправо на 2 позиции.</li>
-            <li>Сравните "c" в паттерне с "a" в тексте, несоответствие.</li>
-            <li>Используйте таблицу смещений, чтобы сдвинуть паттерн вправо на 3 позиции.</li>
-            <li>Сравните "c" в паттерне с "c" в тексте, совпадение.</li>
-            <li>Сравните "b" в паттерне с "b" в тексте, совпадение.</li>
-            <li>Сравните "a" в паттерне с "a" в тексте, совпадение.</li>
-            <li>Найдено первое вхождение паттерна в тексте.</li>
-            <li>Используйте таблицу смещений, чтобы сдвинуть паттерн вправо на 1 позицию.</li>
-            <li>Сравните "c" в паттерне с "b" в тексте, несоответствие.</li>
-            <li>Используйте таблицу смещений, чтобы сдвинуть паттерн вправо на 2 позиции.</li>
-            <li>Сравните "c" в паттерне с "a" в тексте, совпадение.</li>
-            <li>Используйте таблицу смещений, чтобы сдвинуть паттерн вправо на 3 позиции.</li>
-            <li>Сравните "c" в паттерне с "c" в тексте, несоответствие.</li>
-            <li>Используйте таблицу смещений, чтобы сдвинуть паттерн вправо на 3 позиции.</li>
-            <li>Сравните "c" в паттерне с "b" в тексте, несоответствие.</li>
-            <li>Используйте таблицу смещений, чтобы сдвинуть паттерн вправо на 2 позиции.</li>
-            <li>Сравните "c" в паттерне с "a" в тексте, несоответствие.</li>
-            <li>Используйте таблицу смещений, чтобы сдвинуть паттерн вправо на 3 позиции.</li>
-            <li>Сравните "c" в паттерне с "c" в тексте, совпадение.</li>
-            <li>Сравните "b" в паттерне с "b" в тексте, совпадение.</li>
-            <li>Сравните "a" в паттерне с "a" в тексте, совпадение.</li>
-            <li>Найдено второе вхождение паттерна в тексте.</li>
-        </ol>
-
-        <h6>Модификация в духе Чжу-Такаоки</h6>
-        <p>
-            Модификация алгоритма Бойера-Мура в духе Чжу-Такаоки - это улучшенная версия классического алгоритма
-            Бойера-Мура для поиска подстроки в строке. Эта модификация использует два массива препроцессинга, которые
-            называются массивами хэшей и суффиксов. Массив хэшей используется для быстрого вычисления хэша подстроки, а
-            массив суффиксов используется для быстрого нахождения наибольшего суффикса подстроки, который является также
-            ее префиксом. Это позволяет ускорить алгоритм, особенно когда искомая подстрока имеет большую длину.
-        </p>
-        <p>
-            В общем случае, алгоритм Бойера-Мура и его модификации хорошо подходят для поиска подстроки в строке, когда
-            подстрока имеет небольшую длину и часто встречается в тексте. Однако, когда подстрока имеет большую длину
-            или встречается редко, более эффективным решением может быть использование суффиксных деревьев.
-        </p>
-
-    </div>
+  <div class="header">
+    <h1>Вопрос 12</h1>
+  </div>
+  <div class="main">
+    <h4>Алгоритмы Хэширования</h4>
+    <p>(4 лекция/58 страница)</p>
+  </div>
 </div>
 </body>
 </html>
