--- a/pages/question7.html
+++ b/pages/question7.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Вопрос 7</title>
+  <title>Вопрос 9</title>
   <link rel="stylesheet" href="../static/css/styles.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
@@ -14,23 +14,22 @@
   <a href="question3.html">Вопрос 3</a>
   <a href="question4.html">Вопрос 4</a>
   <a href="question5.html">Вопрос 5</a>
-  <a href="question4.html">Вопрос 6</a>
-  <a href="question5.html">Вопрос 7</a>
-  <a href="question6.html">Вопрос 8</a>
+  <a href="question6.html">Вопрос 6</a>
+  <a href="question7.html">Вопрос 7</a>
+  <a href="question8.html">Вопрос 8</a>
   <a href="question9.html">Вопрос 9</a>
   <a href="question10.html">Вопрос 10</a>
   <a href="question11.html">Вопрос 11</a>
   <a href="question12.html">Вопрос 12</a>
   <a href="question13.html">Вопрос 13</a>
-  <a href="question14.html">Вопрос 14</a>
-  <a href="question15.html">Вопрос 15</a>
 </div>
 <div class="content">
   <div class="header">
-    <h1>Вопрос 7</h1>
+    <h1>Вопрос 9</h1>
   </div>
   <div class="main">
-    <h4>Метод резервирования кода COBS (исключение символов)</h4>
+    <h4>Алгоритм поиска образца в тексте с использованием
+      дерева суффиксов</h4>
 
   </div>
 </div>
