--- a/pages/question9.html
+++ b/pages/question9.html
@@ -1,39 +1,80 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <title>Вопрос 9</title>
-  <link rel="stylesheet" href="../static/css/styles.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <meta charset="UTF-8">
+    <title>Вопрос 11</title>
+    <link rel="stylesheet" href="../static/css/styles.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 <body>
 <div class="navbar">
-  <a href="../index.html">Содержание</a>
-  <a href="question1.html">Вопрос 1</a>
-  <a href="question2.html">Вопрос 2</a>
-  <a href="question3.html">Вопрос 3</a>
-  <a href="question4.html">Вопрос 4</a>
-  <a href="question5.html">Вопрос 5</a>
-  <a href="question4.html">Вопрос 6</a>
-  <a href="question5.html">Вопрос 7</a>
-  <a href="question6.html">Вопрос 8</a>
-  <a href="question9.html">Вопрос 9</a>
-  <a href="question10.html">Вопрос 10</a>
-  <a href="question11.html">Вопрос 11</a>
-  <a href="question12.html">Вопрос 12</a>
-  <a href="question13.html">Вопрос 13</a>
-  <a href="question14.html">Вопрос 14</a>
-  <a href="question15.html">Вопрос 15</a>
+    <a href="../index.html">Содержание</a>
+    <a href="question1.html">Вопрос 1</a>
+    <a href="question2.html">Вопрос 2</a>
+    <a href="question3.html">Вопрос 3</a>
+    <a href="question4.html">Вопрос 4</a>
+    <a href="question5.html">Вопрос 5</a>
+    <a href="question6.html">Вопрос 6</a>
+    <a href="question7.html">Вопрос 7</a>
+    <a href="question8.html">Вопрос 8</a>
+    <a href="question9.html">Вопрос 9</a>
+    <a href="question10.html">Вопрос 10</a>
+    <a href="question11.html">Вопрос 11</a>
+    <a href="question12.html">Вопрос 12</a>
+    <a href="question13.html">Вопрос 13</a>
 </div>
 <div class="content">
-  <div class="header">
-    <h1>Вопрос 9</h1>
-  </div>
-  <div class="main">
-    <h4>Алгоритм поиска образца в тексте с использованием
-      дерева суффиксов</h4>
+    <div class="header">
+        <h1>Вопрос 11</h1>
+    </div>
+    <div class="main">
+        <h4>Алгоритм Рабина-Карпа</h4>
+        <p>Алгоритм Рабина-Карпа является алгоритмом поиска подстроки в строке, основанным на хэшировании. Он был
+            разработан Майклом Рабином и Ричардом Карпом в 1987 году и широко применяется в обработке строк, алгоритмах
+            компиляции и других областях.</p>
 
-  </div>
+        <h6>Алгоритм Рабина-Карпа</h6>
+        <p>Алгоритм Рабина-Карпа использует хэш-функцию для быстрого сравнения подстроки с окнами строки. Он работает
+            путем хэширования подстроки и сравнения ее хэша с хэшами окон строки.</p>
+
+        <p>Давайте рассмотрим пример алгоритма Рабина-Карпа на строке "ABCABDABABCABE" с подстрокой "ABCAB". Для начала
+            вычислим хэш подстроки и хэши окон строки.</p>
+
+        <p>Процесс вычисления хэшей будет выглядеть следующим образом:</p>
+
+        <pre>
+    Подстрока: ABCAB
+    Хэш подстроки: 110
+  </pre>
+
+        <pre>
+    Окно: ABCAB
+    Хэш окна: 110
+  </pre>
+
+        <p>Теперь мы можем сравнить хэш подстроки с хэшами окон строки. Если они совпадают, мы продолжаем сравнение
+            символов для исключения ложных срабатываний.</p>
+
+        <p>Процесс применения алгоритма Рабина-Карпа будет выглядеть следующим образом:</p>
+
+        <pre>
+    Строка: ABCABDABABCABE
+    Подстрока: ABCAB
+    Хэш подстроки: 110
+    Хэш окна: 110
+    Результат: Найдено в позиции 0
+  </pre>
+
+        <p>Алгоритм Рабина-Карпа находит первое вхождение подстроки в строку. В данном случае, подстрока "ABCAB" найдена
+            в позиции 0 строки "ABCABDABABCABE".</p>
+
+        <p>Если нам нужно найти все вхождения подстроки, мы можем продолжить вычисление хэшей для следующих окон строки
+            и сравнивать их с хэшем подстроки.</p>
+
+        <p>Алгоритм Рабина-Карпа является эффективным методом поиска подстроки в строке, использующим хэширование. Он
+            широко применяется в различных областях, таких как обработка строк, поиск в текстах и других.</p>
+
+    </div>
 </div>
 </body>
 </html>
