--- a/pages/question11.html
+++ b/pages/question11.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Вопрос 13</title>
+    <title>Вопрос 11</title>
     <link rel="stylesheet" href="../static/css/styles.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
@@ -20,27 +20,26 @@
     <a href="question9.html">Вопрос 9</a>
     <a href="question10.html">Вопрос 10</a>
     <a href="question11.html">Вопрос 11</a>
-    <a href="question12.html">Вопрос 12</a>
 </div>
 <div class="content">
     <div class="header">
-        <h1>Вопрос 13</h1>
+        <h1>Вопрос 11</h1>
     </div>
     <div class="main">
-        <h4>Метрика Левенштейна</h4>
+        <h4>Алгоритм построения дерева суффиксов</h4>
         <p>
-            Метрика Левенштейна, также известная как редакционное расстояние, является метрикой сходства между двумя
-            строковыми последовательностями. Она определяет минимальное количество операций вставки, удаления и замены
-            символов, необходимых для преобразования одной строки в другую. Операции:</p>
-        <ul>
-            <li>Вставка: операция добавления нового символа в строку на определенной позиции.</li>
-            <li>Удаление: операция удаления символа из строки на определенной позиции.</li>
-            <li>Замена: операция замены одного символа в строке на другой.</li>
-        </ul>
+            Допустим у нас есть текст "abcabb0",для него мы можем выписать все его суффиксы.
+        <p>1)abcabb0</p>
+        <p>2)bcabb0</p>
+        <p>3)cabb0</p>
+        <p>4)abb0</p>
+        <p>5)bb0</p>
+        <p>6)b0</p>
+        <p>7)0</p>
         <p>
-            Например, для строк "кот" и "скотина" расстояние Левенштейна равно 4, так как необходимо выполнить 2 вставки
-            ("с" и "и"), 1 удаление ("к") и 1 замену ("т" на "н").
+            таким образом мы получили 7 суффиксов,теперь мы можем построить дерево суффиксов.
         </p>
+        <img src="../src/suffix.png" width="500" height="392">
     </div>
 </div>
 </body>
