--- a/pages/question2.html
+++ b/pages/question2.html
@@ -20,9 +20,7 @@
     <a href="question9.html">Вопрос 9</a>
     <a href="question10.html">Вопрос 10</a>
     <a href="question11.html">Вопрос 11</a>
-    <a href="question12.html">Вопрос 12</a>
-</div>
-<div class="content">
+</div><div class="content">
     <div class="header">
         <h1>Вопрос 2</h1>
     </div>
