--- a/pages/question6.html
+++ b/pages/question6.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Вопрос 8</title>
+    <title>Вопрос 6</title>
     <link rel="stylesheet" href="../static/css/styles.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
@@ -20,54 +20,35 @@
     <a href="question9.html">Вопрос 9</a>
     <a href="question10.html">Вопрос 10</a>
     <a href="question11.html">Вопрос 11</a>
-    <a href="question12.html">Вопрос 12</a>
 </div>
 <div class="content">
     <div class="header">
-        <h1>Вопрос 8</h1>
+        <h1>Вопрос 6</h1>
     </div>
     <div class="main">
-        <h4>Алгоритм Кнута-Морриса-Пратта</h4>
-        <p>Алгоритм Кнута-Морриса-Пратта (KMP) является алгоритмом поиска подстроки в строке. Он был разработан
-            Дональдом Кнутом, Джеймсом Моррисом и Вацлавом Праттом в 1977 году и широко применяется в обработке строк,
-            алгоритмах компиляции и других областях.</p>
-
-        <h6>Алгоритм Кнута-Морриса-Пратта</h6>
-        <p>Алгоритм KMP основан на использовании префикс-функции, которая вычисляет длину самого длинного суффикса
-            подстроки, который также является ее префиксом. Префикс-функция позволяет избежать лишних сравнений при
-            поиске подстроки в строке.</p>
-
-        <p>Давайте рассмотрим пример алгоритма KMP на строке "ABCABDABABCABE". Для начала вычислим префикс-функцию для
-            подстроки "ABCAB".</p>
-
-        <p>Процесс вычисления префикс-функции будет выглядеть следующим образом:</p>
-
-        <pre>
-    Подстрока: ABCAB
-    Префикс-функция: 0 0 0 1 2
-  </pre>
-
-        <p>Теперь мы можем использовать полученную префикс-функцию для поиска подстроки в строке. Мы будем сравнивать
-            символы строки и подстроки, пропуская некоторые сравнения на основе значений префикс-функции.</p>
-
-        <p>Процесс применения алгоритма KMP будет выглядеть следующим образом:</p>
-
-        <pre>
-    Строка: ABCABDABABCABE
-    Подстрока: ABCAB
-    Префикс-функция: 0 0 0 1 2
-    Результат: Найдено в позиции 0
-  </pre>
-
-        <p>Алгоритм KMP находит первое вхождение подстроки в строку. В данном случае, подстрока "ABCAB" найдена в
-            позиции 0 строки "ABCABDABABCABE".</p>
-
-        <p>Если нам нужно найти все вхождения подстроки, мы можем продолжить поиск, начиная со следующей позиции после
-            найденного вхождения.</p>
-
-        <p>Алгоритм Кнута-Морриса-Пратта эффективно находит подстроки в строке, используя префикс-функцию для
-            оптимизации поиска. Он широко применяется в различных областях, таких как обработка строк, поиск в текстах и
-            других.</p>
+        <h4>Метод резервирования кода COBS (исключение символов)</h4>
+        <p>
+            Процесс кодирования COBS начинается с разбиения данных на фрагменты фиксированной длины.
+            Затем каждый фрагмент кодируется следующим образом:
+            Если в фрагменте нет символов "0", то он кодируется как есть.
+            Если в фрагменте есть символ "0", то фрагмент разбивается на несколько подфрагментов,
+            каждый из которых заканчивается символом "0". Каждый подфрагмент, кроме последнего,
+            кодируется с добавлением одного байта, содержащего количество байтов в подфрагменте.
+            Последний подфрагмент кодируется без добавления байта длины.
+            Пример кодирования строки "hello, world!" с помощью COBS:
+            Разбиваем строку на фрагменты фиксированной длины (например, по 5 символов): "hello", ", wor", "ld!".
+            Кодируем каждый фрагмент:
+            "hello" кодируется как есть.
+            ", wor" разбивается на два подфрагмента: ", wor" и "0".
+            Первый подфрагмент кодируется с добавлением одного байта длины (4): "\x05, wor".
+            Второй подфрагмент кодируется без добавления байта длины: "\x00".
+            "ld!" разбивается на два подфрагмента: "ld" и "!".
+            Первый подфрагмент кодируется с добавлением одного байта длины (2): "\x02ld".
+            Второй подфрагмент кодируется без добавления байта длины: "\x00!".
+            Склеиваем закодированные фрагменты: "hello\x05, wor\x00\x02ld\x00!".
+            Преимуществом метода COBS является то, что он позволяет передавать данные без
+            использования символов конца сообщения, что уменьшает вероятность ошибок при передаче данных.
+        </p>
 
     </div>
 </div>
