--- a/pages/question8.html
+++ b/pages/question8.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Вопрос 10</title>
+    <title>Вопрос 8</title>
     <link rel="stylesheet" href="../static/css/styles.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
@@ -20,77 +20,57 @@
     <a href="question9.html">Вопрос 9</a>
     <a href="question10.html">Вопрос 10</a>
     <a href="question11.html">Вопрос 11</a>
-    <a href="question12.html">Вопрос 12</a>
 </div>
 <div class="content">
     <div class="header">
-        <h1>Вопрос 10</h1>
+        <h1>Вопрос 8</h1>
     </div>
     <div class="main">
-        <h4>Алгоритм Бойера-Мура</h4>
-        <ol>
-            <li>Создайте таблицу смещений, содержащую информацию о том, насколько можно сдвинуть паттерн вправо, если
-                произошло несоответствие. Если символ не встречается в паттерне, сдвиньте на длину паттерна. В противном
-                случае сдвиньте на максимально возможное число позиций, чтобы выровнять последнее вхождение этого
-                символа в
-                паттерне с текущей позицией.
-            </li>
-            <li>Сравните паттерн с текстом, начиная с конца паттерна и двигаясь влево. Если все символы совпадают, вы
-                нашли вхождение паттерна.
-            </li>
-            <li>Если символы не совпадают, используйте таблицу смещений, чтобы сдвинуть паттерн вправо на
-                соответствующее
-                количество позиций.
-            </li>
-            <li>
-                Повторяйте шаги 2-3, пока не найдете все вхождения паттерна в тексте.
-            </li>
-        </ol>
+        <h4>Алгоритм Рабина-Карпа</h4>
+        <p>Алгоритм Рабина-Карпа является алгоритмом поиска подстроки в строке, основанным на хэшировании. Он был
+            разработан Майклом Рабином и Ричардом Карпом в 1987 году и широко применяется в обработке строк, алгоритмах
+            компиляции и других областях.</p>
 
-        <p>Вот пример использования алгоритма Бойера-Мура для поиска вхождений паттерна "abc" в тексте
-            "abacababc":</p>
-        <ol>
-            <li>Создайте таблицу смещений: "a" - 3, "b" - 2, "c" - 1.</li>
-            <li>Начните сравнивать паттерн с текстом, начиная с конца паттерна и двигаясь влево. Сначала сравните "c" в
-                паттерне с "b" в тексте, несоответствие.
-            </li>
-            <li>Используйте таблицу смещений, чтобы сдвинуть паттерн вправо на 2 позиции.</li>
-            <li>Сравните "c" в паттерне с "a" в тексте, несоответствие.</li>
-            <li>Используйте таблицу смещений, чтобы сдвинуть паттерн вправо на 3 позиции.</li>
-            <li>Сравните "c" в паттерне с "c" в тексте, совпадение.</li>
-            <li>Сравните "b" в паттерне с "b" в тексте, совпадение.</li>
-            <li>Сравните "a" в паттерне с "a" в тексте, совпадение.</li>
-            <li>Найдено первое вхождение паттерна в тексте.</li>
-            <li>Используйте таблицу смещений, чтобы сдвинуть паттерн вправо на 1 позицию.</li>
-            <li>Сравните "c" в паттерне с "b" в тексте, несоответствие.</li>
-            <li>Используйте таблицу смещений, чтобы сдвинуть паттерн вправо на 2 позиции.</li>
-            <li>Сравните "c" в паттерне с "a" в тексте, совпадение.</li>
-            <li>Используйте таблицу смещений, чтобы сдвинуть паттерн вправо на 3 позиции.</li>
-            <li>Сравните "c" в паттерне с "c" в тексте, несоответствие.</li>
-            <li>Используйте таблицу смещений, чтобы сдвинуть паттерн вправо на 3 позиции.</li>
-            <li>Сравните "c" в паттерне с "b" в тексте, несоответствие.</li>
-            <li>Используйте таблицу смещений, чтобы сдвинуть паттерн вправо на 2 позиции.</li>
-            <li>Сравните "c" в паттерне с "a" в тексте, несоответствие.</li>
-            <li>Используйте таблицу смещений, чтобы сдвинуть паттерн вправо на 3 позиции.</li>
-            <li>Сравните "c" в паттерне с "c" в тексте, совпадение.</li>
-            <li>Сравните "b" в паттерне с "b" в тексте, совпадение.</li>
-            <li>Сравните "a" в паттерне с "a" в тексте, совпадение.</li>
-            <li>Найдено второе вхождение паттерна в тексте.</li>
-        </ol>
+        <h6>Алгоритм Рабина-Карпа</h6>
+        <p>Алгоритм Рабина-Карпа использует хэш-функцию для быстрого сравнения подстроки с окнами строки. Он работает
+            путем хэширования подстроки и сравнения ее хэша с хэшами окон строки.</p>
 
-        <h6>Модификация в духе Чжу-Такаоки</h6>
-        <p>
-            Модификация алгоритма Бойера-Мура в духе Чжу-Такаоки - это улучшенная версия классического алгоритма
-            Бойера-Мура для поиска подстроки в строке. Эта модификация использует два массива препроцессинга, которые
-            называются массивами хэшей и суффиксов. Массив хэшей используется для быстрого вычисления хэша подстроки, а
-            массив суффиксов используется для быстрого нахождения наибольшего суффикса подстроки, который является также
-            ее префиксом. Это позволяет ускорить алгоритм, особенно когда искомая подстрока имеет большую длину.
-        </p>
-        <p>
-            В общем случае, алгоритм Бойера-Мура и его модификации хорошо подходят для поиска подстроки в строке, когда
-            подстрока имеет небольшую длину и часто встречается в тексте. Однако, когда подстрока имеет большую длину
-            или встречается редко, более эффективным решением может быть использование суффиксных деревьев.
-        </p>
+        <p>Давайте рассмотрим пример алгоритма Рабина-Карпа на строке "ABCABDABABCABE" с подстрокой "ABCAB". Для начала
+            вычислим хэш подстроки и хэши окон строки.</p>
+
+        <p>Процесс вычисления хэшей будет выглядеть следующим образом:</p>
+
+        <pre>
+    Подстрока: ABCAB
+    Хэш подстроки: 110
+  </pre>
+
+        <pre>
+    Окно: ABCAB
+    Хэш окна: 110
+  </pre>
+
+        <p>Теперь мы можем сравнить хэш подстроки с хэшами окон строки. Если они совпадают, мы продолжаем сравнение
+            символов для исключения ложных срабатываний.</p>
+
+        <p>Процесс применения алгоритма Рабина-Карпа будет выглядеть следующим образом:</p>
+
+        <pre>
+    Строка: ABCABDABABCABE
+    Подстрока: ABCAB
+    Хэш подстроки: 110
+    Хэш окна: 110
+    Результат: Найдено в позиции 0
+  </pre>
+
+        <p>Алгоритм Рабина-Карпа находит первое вхождение подстроки в строку. В данном случае, подстрока "ABCAB" найдена
+            в позиции 0 строки "ABCABDABABCABE".</p>
+
+        <p>Если нам нужно найти все вхождения подстроки, мы можем продолжить вычисление хэшей для следующих окон строки
+            и сравнивать их с хэшем подстроки.</p>
+
+        <p>Алгоритм Рабина-Карпа является эффективным методом поиска подстроки в строке, использующим хэширование. Он
+            широко применяется в различных областях, таких как обработка строк, поиск в текстах и других.</p>
 
     </div>
 </div>
