--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <a href="pages/question3.html">Вопрос 3</a>
     <a href="pages/question4.html">Вопрос 4</a>
     <a href="pages/question5.html">Вопрос 5</a>
-    <a href="pages/question6.html">Вопрос 6</a>
-    <a href="pages/question7.html">Вопрос 7</a>
-    <a href="pages/question8.html">Вопрос 8</a>
-    <a href="pages/question9.html">Вопрос 9</a>
+    <a href="pages/question5.html">Вопрос 6</a>
+    <a href="pages/question6.html">Вопрос 7</a>
+    <a href="pages/question7.html">Вопрос 8</a>
+    <a href="pages/question8.html">Вопрос 9</a>
     <a href="pages/question10.html">Вопрос 10</a>
-    <a href="pages/question11.html">Вопрос 11</a>
-    <a href="pages/question12.html">Вопрос 12</a>
+    <a href="pages/question9.html">Вопрос 11</a>
+    <a href="pages/question10.html">Вопрос 12</a>
 </div>
 <div class="content">
     <div class="header">
@@ -30,23 +30,16 @@
         <h4>Содержание</h4>
         <ol>
             <li><a href="pages/question1.html">Алгоритм Вагнера-Фишера</a></li>
-            <li><a href="pages/question2.html">Алгоритм Ukkonen’а</a></li>
+            <li><a href="pages/question2.html">Алгоритм Укконена</a></li>
             <li><a href="pages/question3.html">Алгоритм bitap</a></li>
-            <li><a href="pages/question4.html">Алгоритм поиска количества различных подстрок
-                строки S на основе префикс-функции</a></li>
-            <li><a href="pages/question4.html">Алгоритм вычисления префикс-функции, который имеет сложность O(N),
-                где N – длина строки</a></li>
-            <li><a href="pages/question6.html">Алгоритмы LZ</a></li>
-            <li><a href="pages/question5.html">Метод резервирования кода COBS (исключение символов)</a></li>
-            <li><a href="pages/question6.html">Алгоритм Кнута-Морриса-Пратта</a></li>
-            <li><a href="pages/question7.html">Алгоритм поиска образца в тексте с использованием
-                дерева суффиксов</a></li>
-            <li><a href="pages/question8.html">Алгоритм Бойера-Мура</a></li>
-            <li><a href="pages/question9.html">Алгоритм Рабина-Карпа</a></li>
-            <li><a href="pages/question10.html">Алгоритмы Хэширования. Кольцевые алгоритмы хэширования</a></li>
-            <li><a href="pages/question11.html">Метрика Левенштейна</a></li>
-            <li><a href="pages/question12.html">Алгоритм Дейкстры</a></li>
-            <li><a href="pages/question12.html">Алгоритм Сжатия без потерь</a></li>
+            <li><a href="pages/question4.html">Алгоритм вычисления префикс-функции</a></li>
+            <li><a href="pages/question5.html">Алгоритм Кнута-Морриса-Пратта</a></li>
+            <li><a href="pages/question6.html">Метод резервирования кода COBS (исключение символов)</a></li>
+            <li><a href="pages/question7.html">Алгоритм Бойера-Мура</a></li>
+            <li><a href="pages/question8.html">Алгоритм Рабина-Карпа</a></li>
+            <li><a href="pages/question9.html">Метрика Левенштейна</a></li>
+            <li><a href="pages/question10.html">Алгоритмы сжатия</a></li>
+            <li><a href="pages/question11.html">Алгоритм построения дерева суффиксов</a> </li>
         </ol>
     </div>
 </div>
