--- a/pages/question5.html
+++ b/pages/question5.html
@@ -1,35 +1,74 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <title>Вопрос 7</title>
-  <link rel="stylesheet" href="../static/css/styles.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <meta charset="UTF-8">
+    <title>Вопрос 5</title>
+    <link rel="stylesheet" href="../static/css/styles.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 <body>
 <div class="navbar">
-  <a href="../index.html">Содержание</a>
-  <a href="question1.html">Вопрос 1</a>
-  <a href="question2.html">Вопрос 2</a>
-  <a href="question3.html">Вопрос 3</a>
-  <a href="question4.html">Вопрос 4</a>
-  <a href="question5.html">Вопрос 5</a>
-  <a href="question6.html">Вопрос 6</a>
-  <a href="question7.html">Вопрос 7</a>
-  <a href="question8.html">Вопрос 8</a>
-  <a href="question9.html">Вопрос 9</a>
-  <a href="question10.html">Вопрос 10</a>
-  <a href="question11.html">Вопрос 11</a>
-  <a href="question12.html">Вопрос 12</a>
+    <a href="../index.html">Содержание</a>
+    <a href="question1.html">Вопрос 1</a>
+    <a href="question2.html">Вопрос 2</a>
+    <a href="question3.html">Вопрос 3</a>
+    <a href="question4.html">Вопрос 4</a>
+    <a href="question5.html">Вопрос 5</a>
+    <a href="question6.html">Вопрос 6</a>
+    <a href="question7.html">Вопрос 7</a>
+    <a href="question8.html">Вопрос 8</a>
+    <a href="question9.html">Вопрос 9</a>
+    <a href="question10.html">Вопрос 10</a>
+    <a href="question11.html">Вопрос 11</a>
 </div>
 <div class="content">
-  <div class="header">
-    <h1>Вопрос 7</h1>
-  </div>
-  <div class="main">
-    <h4>Метод резервирования кода COBS (исключение символов)</h4>
+    <div class="header">
+        <h1>Вопрос 5</h1>
+    </div>
+    <div class="main">
+        <h4>Алгоритм Кнута-Морриса-Пратта</h4>
+        <p>Алгоритм Кнута-Морриса-Пратта (KMP) является алгоритмом поиска подстроки в строке. Он был разработан
+            Дональдом Кнутом, Джеймсом Моррисом и Вацлавом Праттом в 1977 году и широко применяется в обработке строк,
+            алгоритмах компиляции и других областях.</p>
 
-  </div>
+        <h6>Алгоритм Кнута-Морриса-Пратта</h6>
+        <p>Алгоритм KMP основан на использовании префикс-функции, которая вычисляет длину самого длинного суффикса
+            подстроки, который также является ее префиксом. Префикс-функция позволяет избежать лишних сравнений при
+            поиске подстроки в строке.</p>
+
+        <p>Давайте рассмотрим пример алгоритма KMP на строке "ABCABDABABCABE". Для начала вычислим префикс-функцию для
+            подстроки "ABCAB".</p>
+
+        <p>Процесс вычисления префикс-функции будет выглядеть следующим образом:</p>
+
+        <pre>
+    Подстрока: ABCAB
+    Префикс-функция: 0 0 0 1 2
+  </pre>
+
+        <p>Теперь мы можем использовать полученную префикс-функцию для поиска подстроки в строке. Мы будем сравнивать
+            символы строки и подстроки, пропуская некоторые сравнения на основе значений префикс-функции.</p>
+
+        <p>Процесс применения алгоритма KMP будет выглядеть следующим образом:</p>
+
+        <pre>
+    Строка: ABCABDABABCABE
+    Подстрока: ABCAB
+    Префикс-функция: 0 0 0 1 2
+    Результат: Найдено в позиции 0
+  </pre>
+
+        <p>Алгоритм KMP находит первое вхождение подстроки в строку. В данном случае, подстрока "ABCAB" найдена в
+            позиции 0 строки "ABCABDABABCABE".</p>
+
+        <p>Если нам нужно найти все вхождения подстроки, мы можем продолжить поиск, начиная со следующей позиции после
+            найденного вхождения.</p>
+
+        <p>Алгоритм Кнута-Морриса-Пратта эффективно находит подстроки в строке, используя префикс-функцию для
+            оптимизации поиска. Он широко применяется в различных областях, таких как обработка строк, поиск в текстах и
+            других.</p>
+
+    </div>
 </div>
 </body>
 </html>
