--- a/pages/question7.html
+++ b/pages/question7.html
@@ -1,57 +1,97 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <title>Вопрос 7</title>
-  <link rel="stylesheet" href="../static/css/styles.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <meta charset="UTF-8">
+    <title>Вопрос 7</title>
+    <link rel="stylesheet" href="../static/css/styles.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 <body>
 <div class="navbar">
-  <a href="../index.html">Содержание</a>
-  <a href="question1.html">Вопрос 1</a>
-  <a href="question2.html">Вопрос 2</a>
-  <a href="question3.html">Вопрос 3</a>
-  <a href="question4.html">Вопрос 4</a>
-  <a href="question5.html">Вопрос 5</a>
-  <a href="question4.html">Вопрос 6</a>
-  <a href="question5.html">Вопрос 7</a>
-  <a href="question6.html">Вопрос 8</a>
-  <a href="question9.html">Вопрос 9</a>
-  <a href="question10.html">Вопрос 10</a>
-  <a href="question11.html">Вопрос 11</a>
-  <a href="question12.html">Вопрос 12</a>
+    <a href="../index.html">Содержание</a>
+    <a href="question1.html">Вопрос 1</a>
+    <a href="question2.html">Вопрос 2</a>
+    <a href="question3.html">Вопрос 3</a>
+    <a href="question4.html">Вопрос 4</a>
+    <a href="question5.html">Вопрос 5</a>
+    <a href="question6.html">Вопрос 6</a>
+    <a href="question7.html">Вопрос 7</a>
+    <a href="question8.html">Вопрос 8</a>
+    <a href="question9.html">Вопрос 9</a>
+    <a href="question10.html">Вопрос 10</a>
+    <a href="question11.html">Вопрос 11</a>
 </div>
 <div class="content">
-  <div class="header">
-    <h1>Вопрос 7</h1>
-  </div>
-  <div class="main">
-    <h4>Метод резервирования кода COBS (исключение символов)</h4>
-    <p>
-      Процесс кодирования COBS начинается с разбиения данных на фрагменты фиксированной длины.
-      Затем каждый фрагмент кодируется следующим образом:
-      Если в фрагменте нет символов "0", то он кодируется как есть.
-      Если в фрагменте есть символ "0", то фрагмент разбивается на несколько подфрагментов,
-      каждый из которых заканчивается символом "0". Каждый подфрагмент, кроме последнего,
-      кодируется с добавлением одного байта, содержащего количество байтов в подфрагменте.
-      Последний подфрагмент кодируется без добавления байта длины.
-      Пример кодирования строки "hello, world!" с помощью COBS:
-      Разбиваем строку на фрагменты фиксированной длины (например, по 5 символов): "hello", ", wor", "ld!".
-      Кодируем каждый фрагмент:
-      "hello" кодируется как есть.
-      ", wor" разбивается на два подфрагмента: ", wor" и "0".
-      Первый подфрагмент кодируется с добавлением одного байта длины (4): "\x05, wor".
-      Второй подфрагмент кодируется без добавления байта длины: "\x00".
-      "ld!" разбивается на два подфрагмента: "ld" и "!".
-      Первый подфрагмент кодируется с добавлением одного байта длины (2): "\x02ld".
-      Второй подфрагмент кодируется без добавления байта длины: "\x00!".
-      Склеиваем закодированные фрагменты: "hello\x05, wor\x00\x02ld\x00!".
-      Преимуществом метода COBS является то, что он позволяет передавать данные без
-      использования символов конца сообщения, что уменьшает вероятность ошибок при передаче данных.
-    </p>
+    <div class="header">
+        <h1>Вопрос 7</h1>
+    </div>
+    <div class="main">
+        <h4>Алгоритм Бойера-Мура</h4>
+        <ol>
+            <li>Создайте таблицу смещений, содержащую информацию о том, насколько можно сдвинуть паттерн вправо, если
+                произошло несоответствие. Если символ не встречается в паттерне, сдвиньте на длину паттерна. В противном
+                случае сдвиньте на максимально возможное число позиций, чтобы выровнять последнее вхождение этого
+                символа в
+                паттерне с текущей позицией.
+            </li>
+            <li>Сравните паттерн с текстом, начиная с конца паттерна и двигаясь влево. Если все символы совпадают, вы
+                нашли вхождение паттерна.
+            </li>
+            <li>Если символы не совпадают, используйте таблицу смещений, чтобы сдвинуть паттерн вправо на
+                соответствующее
+                количество позиций.
+            </li>
+            <li>
+                Повторяйте шаги 2-3, пока не найдете все вхождения паттерна в тексте.
+            </li>
+        </ol>
 
-  </div>
+        <p>Вот пример использования алгоритма Бойера-Мура для поиска вхождений паттерна "abc" в тексте
+            "abacababc":</p>
+        <ol>
+            <li>Создайте таблицу смещений: "a" - 3, "b" - 2, "c" - 1.</li>
+            <li>Начните сравнивать паттерн с текстом, начиная с конца паттерна и двигаясь влево. Сначала сравните "c" в
+                паттерне с "b" в тексте, несоответствие.
+            </li>
+            <li>Используйте таблицу смещений, чтобы сдвинуть паттерн вправо на 2 позиции.</li>
+            <li>Сравните "c" в паттерне с "a" в тексте, несоответствие.</li>
+            <li>Используйте таблицу смещений, чтобы сдвинуть паттерн вправо на 3 позиции.</li>
+            <li>Сравните "c" в паттерне с "c" в тексте, совпадение.</li>
+            <li>Сравните "b" в паттерне с "b" в тексте, совпадение.</li>
+            <li>Сравните "a" в паттерне с "a" в тексте, совпадение.</li>
+            <li>Найдено первое вхождение паттерна в тексте.</li>
+            <li>Используйте таблицу смещений, чтобы сдвинуть паттерн вправо на 1 позицию.</li>
+            <li>Сравните "c" в паттерне с "b" в тексте, несоответствие.</li>
+            <li>Используйте таблицу смещений, чтобы сдвинуть паттерн вправо на 2 позиции.</li>
+            <li>Сравните "c" в паттерне с "a" в тексте, совпадение.</li>
+            <li>Используйте таблицу смещений, чтобы сдвинуть паттерн вправо на 3 позиции.</li>
+            <li>Сравните "c" в паттерне с "c" в тексте, несоответствие.</li>
+            <li>Используйте таблицу смещений, чтобы сдвинуть паттерн вправо на 3 позиции.</li>
+            <li>Сравните "c" в паттерне с "b" в тексте, несоответствие.</li>
+            <li>Используйте таблицу смещений, чтобы сдвинуть паттерн вправо на 2 позиции.</li>
+            <li>Сравните "c" в паттерне с "a" в тексте, несоответствие.</li>
+            <li>Используйте таблицу смещений, чтобы сдвинуть паттерн вправо на 3 позиции.</li>
+            <li>Сравните "c" в паттерне с "c" в тексте, совпадение.</li>
+            <li>Сравните "b" в паттерне с "b" в тексте, совпадение.</li>
+            <li>Сравните "a" в паттерне с "a" в тексте, совпадение.</li>
+            <li>Найдено второе вхождение паттерна в тексте.</li>
+        </ol>
+
+        <h6>Модификация в духе Чжу-Такаоки</h6>
+        <p>
+            Модификация алгоритма Бойера-Мура в духе Чжу-Такаоки - это улучшенная версия классического алгоритма
+            Бойера-Мура для поиска подстроки в строке. Эта модификация использует два массива препроцессинга, которые
+            называются массивами хэшей и суффиксов. Массив хэшей используется для быстрого вычисления хэша подстроки, а
+            массив суффиксов используется для быстрого нахождения наибольшего суффикса подстроки, который является также
+            ее префиксом. Это позволяет ускорить алгоритм, особенно когда искомая подстрока имеет большую длину.
+        </p>
+        <p>
+            В общем случае, алгоритм Бойера-Мура и его модификации хорошо подходят для поиска подстроки в строке, когда
+            подстрока имеет небольшую длину и часто встречается в тексте. Однако, когда подстрока имеет большую длину
+            или встречается редко, более эффективным решением может быть использование суффиксных деревьев.
+        </p>
+
+    </div>
 </div>
 </body>
 </html>
