--- a/pages/question10.html
+++ b/pages/question10.html
@@ -32,7 +32,7 @@
             Алгоритм Хаффмана - это алгоритм сжатия данных, который формулирует основную идею сжатия файлов. Он
             использует кодирование переменной длины, которое позволяет использовать меньшее количество битов для
             кодирования наиболее часто встречающихся символов и большее количество битов для кодирования редких
-            символов. Это позволяет уменьшить размер файла и ускорить передачу данных
+            символов. Это позволяет уменьшить размер файла и ускорить передачу данных.
         </p>
         <p>
             Для сжатия файла с помощью алгоритма Хаффмана, сначала необходимо подсчитать частоту встречаемости каждого
@@ -51,9 +51,32 @@
             содержит его код. При декодировании файла каждый код Хаффмана заменяется на соответствующий символ, что
             позволяет восстановить исходный файл
         </p>
+        <p>Дерево строится следующим образом: </p>
+        <ol>
+            <li>Каждый символ строки становится узлом будущего дерева</li>
+            <li>
+                Узлы размещаются в порядке возрастания чатсотности в очереди так, чтобы у выхода очереди находились
+                самые редкие символы
+            </li>
+            <li>
+                Два узла с наименьшей частотой извлекаются из очереди и объединяются одним узлом, формируя мини-дерево
+                из двух узлов и корня, частота которого равна сумме частот двух извлеченных узлов
+            </li>
+            <li>
+                Мини-дерево добавляется в очередь в нужное место в зависимости от частоты корня
+            </li>
+            <li>
+                Шаги 3 и 4 повторяются до тех пор, пока в очереди не останется один узел - корень дерева Хаффмана
+            </li>
+        </ol>
+        <img src="../src/haffman_1.jpeg" alt="haffman">
+        <p>
+            Примечание: в последнем этапе на картинке опечатка - на правом дереве вместо символа пробела
+            должен быть символ S.
+        </p>
+        <img src="../src/haffman_2.jpeg" alt="haffman">
 
         <h4>Метод RLE</h4>
-
         <p>
             Метод RLE (Run-Length Encoding) — это алгоритм сжатия данных, который заменяет повторяющиеся символы (серии)
             на один символ и число его повторов. Этот алгоритм является простым и эффективным для данных, содержащих
@@ -154,80 +177,55 @@
             (1, 3), (2, 4), (2, 5), (3, 4).</p>
 
         <h4>Алгоритм LZW</h4>
-        <p>Алгоритм LZW является улучшенной версией алгоритма LZ77. Он также использует словарь, но добавляет новые
+        <p>Алгоритм LZW является улучшенной версией алгоритма LZ77. Он также использует таблицу, но добавляет новые
             фразы в словарь при сжатии, а не только заменяет повторяющиеся фрагменты.</p>
 
-        <p>Рассмотрим пример алгоритма LZW на строке "ABABABA". Для начала создадим пустой словарь и инициализируем его
-            однобуквенными символами.</p>
+        <p>
+            Рассмотрим пример алгоритма LZW на строке "aaababbaab". Для начала создадим пустой словарь и инициализируем
+            его
+            однобуквенными символами.
+        </p>
 
-        <pre>
-    Исходная строка: ABABABA
-    Словарь: A, B
-    Сжатие:</pre>
 
-        <p>1. Первый символ "A" не находится в словаре, поэтому мы добавляем его в словарь и оставляем сжатие
-            пустым.</p>
+        <table>
+            <tr>
+                <th>Код</th>
+                <th>Текст</th>
+            </tr>
+            <tr>
+                <td>0</td>
+                <td>a</td>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>b</td>
+            </tr>
+        </table>
+        <p>"<b>a</b>aababbaab" - а есть в таблице, идем по строке пока не найдем отустствующий в таблице текст</p>
+        <p>
+            "<b>аa</b>ababbaab" - аа нет в таблице, выводим код для предыдущей (0) и заносим в таблицу аа,
+            добавляем следующий символ строки, так как аа не было в таблице
+        </p>
+        <table>
+            <tr>
+                <th>Код</th>
+                <th>Текст</th>
+            </tr>
+            <tr>
+                <td>0</td>
+                <td>a</td>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>b</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>аа</td>
+            </tr>
+        </table>
+        <p>"<b>аab</b>abbaab" - ааb нет в таблице, идем по строке пока не найдем отустствующий в таблице текст</p>
 
-        <pre>
-    Исходная строка: ABABABA
-    Словарь: A, B
-    Сжатие:</pre>
-
-        <p>2. Второй символ "B" также не находится в словаре, поэтому мы добавляем его в словарь и оставляем сжатие
-            пустым.</p>
-
-        <pre>
-    Исходная строка: ABABABA
-    Словарь: A, B
-    Сжатие:</pre>
-
-        <p>3. Третий символ "A" уже находится в словаре, поэтому мы добавляем его к текущей фразе и переходим к
-            следующему символу.</p>
-
-        <pre>
-    Исходная строка: ABABABA
-    Словарь: A, B
-    Сжатие:
-    Текущая фраза: A</pre>
-
-        <p>4. Четвертый символ "B" уже находится в словаре, поэтому мы добавляем его к текущей фразе и переходим к
-            следующему символу.</p>
-
-        <pre>
-    Исходная строка: ABABABA
-    Словарь: A, B
-    Сжатие:
-    Текущая фраза: AB</pre>
-
-        <p>5. Пятый символ "A" уже находится в словаре, поэтому мы добавляем текущую фразу "AB" к сжатию и устанавливаем
-            текущую фразу равной "A".</p>
-
-        <pre>
-    Исходная строка: ABABABA
-    Словарь: A, B, AB
-    Сжатие: AB
-    Текущая фраза: A</pre>
-
-        <p>6. Шестой символ "B" уже находится в словаре, поэтому мы добавляем текущую фразу "A" к сжатию и устанавливаем
-            текущую фразу равной "B".</p>
-
-        <pre>
-    Исходная строка: ABABABA
-    Словарь: A, B, AB
-    Сжатие: AB, A
-    Текущая фраза: B</pre>
-
-        <p>7. Седьмой символ "A" уже находится в словаре, поэтому мы добавляем текущую фразу "B" к сжатию и
-            устанавливаем текущую фразу равной "A".</p>
-
-        <pre>
-    Исходная строка: ABABABA
-    Словарь: A, B, AB
-    Сжатие: AB, A, B
-    Текущая фраза: A</pre>
-
-        <p>Таким образом, сжатие алгоритмом LZW для строки "ABABABA" будет состоять из последовательности символов: AB,
-            A, B, A.</p>
 
         <p>Алгоритмы LZ77 и LZW являются эффективными методами сжатия данных. Они позволяют уменьшить размер данных,
             сохраняя при этом информацию о повторяющихся фрагментах. Оба алгоритма широко используются в области сжатия
