--- a/pages/question2.html
+++ b/pages/question2.html
@@ -26,6 +26,8 @@
     </div>
     <div class="main">
         <h4>Алгоритм Укконена (заменить пример)</h4>
+        <p>Позволяет строить СЖАТОЕ суффиксное дерево за линейное время для поиска подстоки в строке.</p>
+        <p>СЖАТОЕ суффиксное дерево - дерево в котором ветви без равилок сжаты до одного ребра.</p>
         <p>Алгоритм Укконена - это эффективный алгоритм для построения суффиксного дерева строки. Он был разработан
             Эском Укконеном в 1995 году и представляет собой один из наиболее используемых методов для обработки и
             анализа строковых данных.</p>
