--- a/pages/question5.html
+++ b/pages/question5.html
@@ -27,47 +27,22 @@
     </div>
     <div class="main">
         <h4>Алгоритм Кнута-Морриса-Пратта</h4>
+        <p>
+            Представим есть строка "аабаа" и мы её ищем в строке "аабааббаббаабаабб".
+            Теперь нам нужно склеит строки поместив между ними символ, который НЕ ВСТРЕЧАЕТСЯ ни в одной из строк.
+            Это важно, чтобы символ разделения не смешался ни с одной из строк и максимальные значения префикс-функции
+            были равны длине эталонной строки.
+            Например, "аабаа#аабааббаббаабаабб". Теперь передадим полученную строку в префикс-функцию. Получим массив
+        </p>
+        <pre>[0, 1, 0, 1, 2, 0, 1, 2, 3, 4, <b>5</b>, 3, 0, 0, 0, 0, 1, 2, 3, 4, <b>5</b>, 3, 0].</pre>
+        <p>
+            В массиве получены два значения равных длинне эталонной строки. Это означает, что всего в строке 2 вхождения
+            эталонной строки, а их позиции можно подсчитать как индекс значения их длин минус их (длина - 1).
+        </p>
         <p>Алгоритм Кнута-Морриса-Пратта (KMP) является алгоритмом поиска подстроки в строке. Он был разработан
             Дональдом Кнутом, Джеймсом Моррисом и Вацлавом Праттом в 1977 году и широко применяется в обработке строк,
-            алгоритмах компиляции и других областях.</p>
-
-        <h6>Алгоритм Кнута-Морриса-Пратта</h6>
-        <p>Алгоритм KMP основан на использовании префикс-функции, которая вычисляет длину самого длинного суффикса
-            подстроки, который также является ее префиксом. Префикс-функция позволяет избежать лишних сравнений при
-            поиске подстроки в строке.</p>
-
-        <p>Давайте рассмотрим пример алгоритма KMP на строке "ABCABDABABCABE". Для начала вычислим префикс-функцию для
-            подстроки "ABCAB".</p>
-
-        <p>Процесс вычисления префикс-функции будет выглядеть следующим образом:</p>
-
-        <pre>
-    Подстрока: ABCAB
-    Префикс-функция: 0 0 0 1 2
-  </pre>
-
-        <p>Теперь мы можем использовать полученную префикс-функцию для поиска подстроки в строке. Мы будем сравнивать
-            символы строки и подстроки, пропуская некоторые сравнения на основе значений префикс-функции.</p>
-
-        <p>Процесс применения алгоритма KMP будет выглядеть следующим образом:</p>
-
-        <pre>
-    Строка: ABCABDABABCABE
-    Подстрока: ABCAB
-    Префикс-функция: 0 0 0 1 2
-    Результат: Найдено в позиции 0
-  </pre>
-
-        <p>Алгоритм KMP находит первое вхождение подстроки в строку. В данном случае, подстрока "ABCAB" найдена в
-            позиции 0 строки "ABCABDABABCABE".</p>
-
-        <p>Если нам нужно найти все вхождения подстроки, мы можем продолжить поиск, начиная со следующей позиции после
-            найденного вхождения.</p>
-
-        <p>Алгоритм Кнута-Морриса-Пратта эффективно находит подстроки в строке, используя префикс-функцию для
-            оптимизации поиска. Он широко применяется в различных областях, таких как обработка строк, поиск в текстах и
-            других.</p>
-
+            алгоритмах компиляции и других областях.
+        </p>
     </div>
 </div>
 </body>
