--- a/pages/question8.html
+++ b/pages/question8.html
@@ -34,44 +34,27 @@
         <h6>Алгоритм Рабина-Карпа</h6>
         <p>Алгоритм Рабина-Карпа использует хэш-функцию для быстрого сравнения подстроки с окнами строки. Он работает
             путем хэширования подстроки и сравнения ее хэша с хэшами окон строки.</p>
-
-        <p>Давайте рассмотрим пример алгоритма Рабина-Карпа на строке "ABCABDABABCABE" с подстрокой "ABCAB". Для начала
-            вычислим хэш подстроки и хэши окон строки.</p>
-
-        <p>Процесс вычисления хэшей будет выглядеть следующим образом:</p>
-
-        <pre>
-    Подстрока: ABCAB
-    Хэш подстроки: 110
-  </pre>
-
-        <pre>
-    Окно: ABCAB
-    Хэш окна: 110
-  </pre>
-
-        <p>Теперь мы можем сравнить хэш подстроки с хэшами окон строки. Если они совпадают, мы продолжаем сравнение
-            символов для исключения ложных срабатываний.</p>
-
-        <p>Процесс применения алгоритма Рабина-Карпа будет выглядеть следующим образом:</p>
-
-        <pre>
-    Строка: ABCABDABABCABE
-    Подстрока: ABCAB
-    Хэш подстроки: 110
-    Хэш окна: 110
-    Результат: Найдено в позиции 0
-  </pre>
-
-        <p>Алгоритм Рабина-Карпа находит первое вхождение подстроки в строку. В данном случае, подстрока "ABCAB" найдена
-            в позиции 0 строки "ABCABDABABCABE".</p>
-
-        <p>Если нам нужно найти все вхождения подстроки, мы можем продолжить вычисление хэшей для следующих окон строки
-            и сравнивать их с хэшем подстроки.</p>
-
-        <p>Алгоритм Рабина-Карпа является эффективным методом поиска подстроки в строке, использующим хэширование. Он
-            широко применяется в различных областях, таких как обработка строк, поиск в текстах и других.</p>
-
+        <p>Давайте рассмотрим пример алгоритма Рабина-Карпа на строке</p>
+        <pre>"get our chrome extension"</pre> <p> с подстрокой</p> <pre>"r c"</pre>
+        <ol>
+            <li>Для начала вычислим хэш подстроки (приведен условный пример):
+                <pre>hash("r c") = 112</pre>
+            </li>
+            <li>
+                Итерируем строку по длине подстроки (3) и для каждой выявленной части строки вычисляем хэш.
+                <pre>hash("get") = 129
+hash("et ") = 136
+hash("t o") = 133
+...
+<b>hash("r c") = 112</b>
+...
+hash("ion") = 156</pre>
+                <ul>
+                    <li>Если нашлось совпадение: подстрока входит в строку.</li>
+                    <li>Если, дошли до конца, и не нашлось совпадения: подстрока не входит в строку.</li>
+                </ul>
+            </li>
+        </ol>
     </div>
 </div>
 </body>
