--- a/pages/question6.html
+++ b/pages/question6.html
@@ -30,26 +30,39 @@
         <p>
             Процесс кодирования COBS начинается с разбиения данных на фрагменты фиксированной длины.
             Затем каждый фрагмент кодируется следующим образом:
-            Если в фрагменте нет символов "0", то он кодируется как есть.
-            Если в фрагменте есть символ "0", то фрагмент разбивается на несколько подфрагментов,
-            каждый из которых заканчивается символом "0". Каждый подфрагмент, кроме последнего,
-            кодируется с добавлением одного байта, содержащего количество байтов в подфрагменте.
-            Последний подфрагмент кодируется без добавления байта длины.
-            Пример кодирования строки "hello, world!" с помощью COBS:
-            Разбиваем строку на фрагменты фиксированной длины (например, по 5 символов): "hello", ", wor", "ld!".
+        </p>
+        <ul>
+            <li>Если в фрагменте нет символов "0", то он кодируется как есть.</li>
+            <li>
+                Если в фрагменте есть символ "0", то фрагмент разбивается на несколько подфрагментов,
+                каждый из которых заканчивается символом "0". Каждый подфрагмент, кроме последнего,
+                кодируется с добавлением одного байта, содержащего количество байтов в подфрагменте.
+                Последний подфрагмент кодируется без добавления байта длины.
+            </li>
+        </ul>
+        <h6>Пример кодирования строки "01 02 <b>00</b> 03 04" с помощью COBS:</h6>
+        <p>
+            Разбиваем строку на фрагменты разделенные <b>00</b>: "01 02", "03 04".
             Кодируем каждый фрагмент:
-            "hello" кодируется как есть.
-            ", wor" разбивается на два подфрагмента: ", wor" и "0".
-            Первый подфрагмент кодируется с добавлением одного байта длины (4): "\x05, wor".
-            Второй подфрагмент кодируется без добавления байта длины: "\x00".
-            "ld!" разбивается на два подфрагмента: "ld" и "!".
-            Первый подфрагмент кодируется с добавлением одного байта длины (2): "\x02ld".
-            Второй подфрагмент кодируется без добавления байта длины: "\x00!".
-            Склеиваем закодированные фрагменты: "hello\x05, wor\x00\x02ld\x00!".
+        </p>
+        <ul>
+            <li>"hello" кодируется как есть.</li>
+            <li>
+                "01 02" приписывается спереди байт, обозначающий длину изначального
+                подфрагмента и самого байта длины: "03 01 02"
+            </li>
+            <li>
+                "03 04" приписывается спереди байт, обозначающий длину изначального
+                подфрагмента и самого байта длины: "03 03 04"
+            </li>
+            <li>
+                Склеиваем закодированные фрагменты: "03 01 02 03 03 04".
+            </li>
+        </ul>
+        <p>
             Преимуществом метода COBS является то, что он позволяет передавать данные без
             использования символов конца сообщения, что уменьшает вероятность ошибок при передаче данных.
         </p>
-
     </div>
 </div>
 </body>
